# Smart_UltraSound_Detection

./: .gitignore  MainWindow.py  README.md  README_CN.md  Ui_MainWindow.py  Ui_MainWindow.ui  devtools.ps1  devtools.sh  main.py  pyproject.toml  reminderprocesswindow.py  reminderprocesswindow.ui  requirements.txt
Audio/: AudioServerControl.py
Core/AnalysisReport/: AnalysisReport.py  DocxGeneraterImpl.py  ReportAnalysisCore.py  __init__.py
Core/Audio/: AudioServerControl.py
Core/Common/: __init__.py  image_utils.py  model_utils.py  path_utils.py
Core/ImageHolder/: ImageHolder.py  __init__.py
Core/InfoPackage/: __init__.py  (+1 more)
DetectWave/: WaveSplitMap.py  detectWave_BackEnd.py
FileViewManager/: FileViewManager.py
ImageBrowser/: ImageBrowseUiManager.py  ImageBrowserCore.py
ModelController/: ModelController.py
ModelUsing/: ImageProcessor.py  ModelExecutor.py  MyModel.py
OCR/: ImageOCR.py  ImageOCR_Preprocessors.py  TextHandler.py  TextRecognizer.py  TextRecognizerCore.py
ReportAnalysis/: DocxGeneraterImpl.py  DocxSourcesGetter.py  ReportAnalysis.py  ReportAnalysisCore.py  ReportAnalysis_front_end.py
ReportGenerator/: PossibleAdviceGenerator.py  ReportDocxGeneratorDriver.py  ReportGenerator.py  ReportGeneratorCoreWrapper.py  ReportGenerator_IMPL.py
Utils/: Utils.py
WaitingProcessBar/: WaitingWidget.py
WordDocxGenerator/: DocxGenerator.py
clean_up/: clean.py
config/: config.ini  config_common.py  config_read_write.py
dev_tools/: open_designer.py  transfer_rcc_to_py.py  transfer_to_uipy.py
documentations/: build_from_raw_source.md  run.md  setup.md
model_train/: ModelUsing.py  model_train.py
smartultrasound_detection/: __init__.py  main.py  pre_main.py
sources/: icons.qrc
tests/: __init__.py
tools/: download.py
(+38 files in other folders)
